# gdwtcore

./: .gitignore  CMakeLists.txt  Todo
cmake/: FindWt.cmake.new  Find_gdwt.cmake  Find_gdwtcore.cmake  Find_vmime.cmake  install_webapp.cmake
resources/gdwtcore/Transl/: gdContainerBar.xml  gdFileDialog.xml  gdWColor.xml  gdWDialog.xml  gdWDialog_fr.xml  gdWFileDialog.xml  gdWFileView.xml  gdWLogon.xml
resources/gdwtcore/Transl/WAsterisk/: WMeetingView.xml
resources/gdwtcore/Transl/WLdap/: gdLdapTree.xml
src/: WPanelList.C  WPanelList.h  dlgHourGlass.cpp  dlgHourGlass.h  gdApplication.cpp  gdApplication.h  gdComboBoxDelegate.cpp  gdComboBoxDelegate.h  gdContainerBar.cpp  gdContainerBar.h  gdCsvModel.C  gdCsvModel.h  gdDoubleSpinBoxDelegate.cpp  gdDoubleSpinBoxDelegate.h  gdFHtmlEditor.cpp  gdFHtmlEditor.h  gdImageDelegate.cpp  gdImageDelegate.h  gdLineEditDelegate.cpp  gdLineEditDelegate.h  gdNumericDelegate.cpp  gdNumericDelegate.h  gdProxyModel.cpp  gdProxyModel.h  gdSpinBoxDelegate.cpp  gdSpinBoxDelegate.h  gdSqlComboBox.cpp  gdSqlComboBox.h  gdSqlComboBoxDelegate.cpp  gdSqlComboBoxDelegate.h  gdSqlContainerBar.cpp  gdSqlContainerBar.h  gdSqlModel.cpp  gdSqlModel.h  gdSqlSuggestionPopup.cpp  gdSqlSuggestionPopup.h  gdSqlTableView.cpp  gdSqlTableView.h  gdSqlTreeView.cpp  gdSqlTreeView.h  (+42 more)
src/WAsterisk/: gdMeetingView.cpp  gdMeetingView.h
src/WLdap/: gdLdapTree.cpp  gdLdapTree.h
